--- a/error.html
+++ b/error.html
@@ -1,168 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>404 - Page Not Found | CCGE - Corporate Commerce Global Education</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Page not found. Navigate back to CCGE's finance education courses and certifications." />
-	<meta name="author" content="kssaiteja">
-	<meta name="keywords" content="CCGE, finance education, 404, page not found" />
-	<meta name="robots" content="noindex, nofollow" />
-	<link rel="icon" href="assets/img/favicon.png">
-	<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>
+      404 - Page Not Found | CCGE - Corporate Commerce Global Education
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Page not found. Navigate back to CCGE's finance education courses and certifications."
+    />
+    <meta name="author" content="kssaiteja" />
+    <meta
+      name="keywords"
+      content="CCGE, finance education, 404, page not found"
+    />
+    <meta name="robots" content="noindex, nofollow" />
+    <link rel="icon" href="assets/img/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="assets/css/animate.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
+  </head>
 
-
-<body>
-
-	<div class="wrapper">
-		<div class="main-section">
-			<header>
-				<div class="container">
-					<div class="header-content d-flex flex-wrap align-items-center">
-						<div class="logo">
-							                <a href="index.html" title="">
+  <body>
+    <div class="wrapper">
+      <div class="main-section">
+        <header>
+          <div class="container">
+            <div class="header-content d-flex flex-wrap align-items-center">
+              <div class="logo">
+                <a href="index.html" title="">
                   <img
-                    src="assets/img/CCGE Final Logo.png"
+                    src="assets/img/ccge-final-logo.png"
                     alt="CCGE - Corporate Commerce Global Education"
-                    style="max-height: 60px; width: auto;"
+                    style="max-height: 60px; width: auto"
                   />
                 </a>
-						</div>
-						<!--logo end-->
-						<ul class="contact-add d-flex flex-wrap">
-							<li>
-								<div class="contact-info">
-									<img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
-									<div class="contact-tt">
-										<h4>Call</h4>
-										<span>+91 7022878870</span>
-									</div>
-								</div>
-								<!--contact-info end-->
-							</li>
-							<li>
-								<div class="contact-info">
-									<img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
-									<div class="contact-tt">
-										<h4>Work Time</h4>
-										<span>Mon - Sat 9 AM - 7 PM</span>
-									</div>
-								</div>
-								<!--contact-info end-->
-							</li>
-							<li>
-								<div class="contact-info">
-									<img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
-									<div class="contact-tt">
-										<h4>Address</h4>
-										<span>Mumbai, Delhi, Pune, Bangalore</span>
-									</div>
-								</div>
-								<!--contact-info end-->
-							</li>
-						</ul>
-						<!--contact-information end-->
-						<div class="menu-btn">
-							<a href="#">
-								<span class="bar1"></span>
-								<span class="bar2"></span>
-								<span class="bar3"></span>
-							</a>
-						</div>
-						<!--menu-btn end-->
-					</div>
-					<!--header-content end-->
-					<div class="navigation-bar d-flex flex-wrap align-items-center">
-						<nav>
-							<ul>
-								<li><a href="index.html" title="">Home</a></li>
-								<li><a href="about.html" title="">About</a></li>
-								<li>
-									<a href="classes.html" title="">Courses</a>
-									<ul>
-										<li><a href="class-single-acca.html" title="">ACCA Course</a></li>
-										<li><a href="class-single-cfa.html" title="">CFA Course</a></li>
-										<li><a href="class-single-cma.html" title="">CMA Course</a></li>
-										<li><a href="class-single-cpa.html" title="">CPA Course</a></li>
-										<li><a href="class-single-frm.html" title="">FRM Course</a></li>
-										<li><a href="class-single-esg.html" title="">ESG Course</a></li>
-										<li><a href="class-single-investment-banking.html" title="">Investment Banking Operations</a></li>
-										<li><a href="class-single-global-investment-banking.html" title="">Global Investment Banking</a></li>
-										<li><a href="class-single-dipifrs.html" title="">DipIFRS Course</a></li>
-									</ul>
-								</li>
+              </div>
+              <!--logo end-->
+              <ul class="contact-add d-flex flex-wrap">
+                <li>
+                  <div class="contact-info">
+                    <img
+                      src="assets/img/icon1.png"
+                      alt="CCGE - Corporate Commerce Global Education"
+                      style="max-height: 50px; width: auto; margin-bottom: 15px"
+                    />
+                    <div class="contact-tt">
+                      <h4>Call</h4>
+                      <span>96666 60713 / 14</span>
+                    </div>
+                  </div>
+                  <!--contact-info end-->
+                </li>
+                <li>
+                  <div class="contact-info">
+                    <img
+                      src="assets/img/icon2.png"
+                      alt="CCGE - Corporate Commerce Global Education"
+                      style="max-height: 50px; width: auto; margin-bottom: 15px"
+                    />
+                    <div class="contact-tt">
+                      <h4>Work Time</h4>
+                      <span>Mon - Sat 9 AM - 7 PM</span>
+                    </div>
+                  </div>
+                  <!--contact-info end-->
+                </li>
+                <li>
+                  <div class="contact-info">
+                    <img
+                      src="assets/img/icon3.png"
+                      alt="CCGE - Corporate Commerce Global Education"
+                      style="max-height: 50px; width: auto; margin-bottom: 15px"
+                    />
+                    <div class="contact-tt">
+                      <h4>Address</h4>
+                      <span
+                        >Opp. Madhura Nagar Metro Station,<br />Beside SBI Bank
+                        Lane,<br />Yella Reddy Guda, Ameerpet.</span
+                      >
+                    </div>
+                  </div>
+                  <!--contact-info end-->
+                </li>
+              </ul>
+              <!--contact-information end-->
+              <div class="menu-btn">
+                <a href="#">
+                  <span class="bar1"></span>
+                  <span class="bar2"></span>
+                  <span class="bar3"></span>
+                </a>
+              </div>
+              <!--menu-btn end-->
+            </div>
+            <!--header-content end-->
+            <div class="navigation-bar d-flex flex-wrap align-items-center">
+              <nav>
+                <ul>
+                  <li><a href="index.html" title="">Home</a></li>
+                  <li><a href="about.html" title="">About</a></li>
+                  <li>
+                    <a href="classes.html" title="">Courses</a>
+                    <ul>
+                      <li>
+                        <a href="class-single-acca.html" title=""
+                          >ACCA Course</a
+                        >
+                      </li>
+                      <li>
+                        <a href="class-single-cfa.html" title="">CFA Course</a>
+                      </li>
+                      <li>
+                        <a href="class-single-cma.html" title="">CMA Course</a>
+                      </li>
+                      <li>
+                        <a href="class-single-cpa.html" title="">CPA Course</a>
+                      </li>
+                      <li>
+                        <a href="class-single-frm.html" title="">FRM Course</a>
+                      </li>
+                      <li>
+                        <a href="class-single-esg.html" title="">ESG Course</a>
+                      </li>
+                      <li>
+                        <a href="class-single-investment-banking.html" title=""
+                          >Investment Banking Operations</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="class-single-global-investment-banking.html"
+                          title=""
+                          >Global Investment Banking</a
+                        >
+                      </li>
+                      <li>
+                        <a href="class-single-dipifrs.html" title=""
+                          >DipIFRS Course</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
 
-								<li><a href="contacts.html" title="">Contact</a></li>
-							</ul>
-						</nav>
-						<!--nav end-->
-						<ul class="social-links ml-auto">
-							<li>
-								<a href="#" title=""><i class="fab fa-facebook-f"></i></a>
-							</li>
-							<li>
-								<a href="#" title=""><i class="fab fa-linkedin-in"></i></a>
-							</li>
-							<li>
-								<a href="#" title=""><i class="fab fa-instagram"></i></a>
-							</li>
-						</ul>
-					</div>
-					<!--navigation-bar end-->
-				</div>
-			</header>
-			<!--header end-->
+                  <li><a href="contacts.html" title="">Contact</a></li>
+                </ul>
+              </nav>
+              <!--nav end-->
+              <ul class="social-links ml-auto">
+                <li>
+                  <a href="#" title=""><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="#" title=""><i class="fab fa-linkedin-in"></i></a>
+                </li>
+                <li>
+                  <a href="#" title=""><i class="fab fa-instagram"></i></a>
+                </li>
+              </ul>
+            </div>
+            <!--navigation-bar end-->
+          </div>
+        </header>
+        <!--header end-->
 
-			<div class="responsive-menu">
-				<ul>
-					<li><a href="index.html" title="">Home</a></li>
-					<li><a href="about.html" title="">About</a></li>
-					<li><a href="classes.html" title="">Courses</a></li>
-					<li><a href="contacts.html" title="">Contact</a></li>
-				</ul>
-			</div>
-			<!--responsive-menu end-->
+        <div class="responsive-menu">
+          <ul>
+            <li><a href="index.html" title="">Home</a></li>
+            <li><a href="about.html" title="">About</a></li>
+            <li><a href="classes.html" title="">Courses</a></li>
+            <li><a href="contacts.html" title="">Contact</a></li>
+          </ul>
+        </div>
+        <!--responsive-menu end-->
 
-		<h2 class="main-title">CCGE</h2>
-		</div>
-		<!--main-section end-->
+        <h2 class="main-title">CCGE</h2>
+      </div>
+      <!--main-section end-->
 
-		<div class="error-page">
-			<h2 class="page-title">CCGE</h2>
-			<div class="container">
-				<div class="error-text">
-					<h2>404</h2>
-					<h3>Page Not Found</h3>
-					<p>The page you're looking for doesn't exist. Please check the URL or navigate to one of our courses.</p>
-					<a href="index.html" title="" class="btn-default">Go to Home <i class="fa fa-long-arrow-alt-right"></i></a>
-					<a href="classes.html" title="" class="btn-default" style="margin-left: 15px;">View Courses <i class="fa fa-long-arrow-alt-right"></i></a>
-					<ul class="social-icons">
-						<li><a href="#" title=""><i class="fab fa-facebook-f"></i></a></li>
-						<li><a href="#" title=""><i class="fab fa-linkedin-in"></i></a></li>
-						<li><a href="#" title=""><i class="fab fa-instagram"></i></a></li>
-					</ul><!--social-icons end-->
-				</div><!--error-text end-->
-			</div>
-		</div><!--error-page end-->
+      <div class="error-page">
+        <h2 class="page-title">CCGE</h2>
+        <div class="container">
+          <div class="error-text">
+            <h2>404</h2>
+            <h3>Page Not Found</h3>
+            <p>
+              The page you're looking for doesn't exist. Please check the URL or
+              navigate to one of our courses.
+            </p>
+            <a href="index.html" title="" class="btn-default"
+              >Go to Home <i class="fa fa-long-arrow-alt-right"></i
+            ></a>
+            <a
+              href="classes.html"
+              title=""
+              class="btn-default"
+              style="margin-left: 15px"
+              >View Courses <i class="fa fa-long-arrow-alt-right"></i
+            ></a>
+            <ul class="social-icons">
+              <li>
+                <a href="#" title=""><i class="fab fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="#" title=""><i class="fab fa-linkedin-in"></i></a>
+              </li>
+              <li>
+                <a href="#" title=""><i class="fab fa-instagram"></i></a>
+              </li>
+            </ul>
+            <!--social-icons end-->
+          </div>
+          <!--error-text end-->
+        </div>
+      </div>
+      <!--error-page end-->
+    </div>
+    <!--wrapper end-->
 
-	</div><!--wrapper end-->
-
-
-<script src="assets/js/jquery.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/isotope.js"></script>
-<script src="assets/js/html5lightbox.js"></script>
-<script src="assets/js/slick.min.js"></script>
-<script src="assets/js/tweenMax.js"></script>
-<script src="assets/js/wow.min.js"></script>
-<script src="assets/js/scripts.js"></script>
-<script src="assets/js/navigation.js"></script>
-
-</body>
-
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/isotope.js"></script>
+    <script src="assets/js/html5lightbox.js"></script>
+    <script src="assets/js/slick.min.js"></script>
+    <script src="assets/js/tweenMax.js"></script>
+    <script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/navigation.js"></script>
+  </body>
 </html>
