--- a/teachers.html
+++ b/teachers.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CCGE - Corporate Commerce Global Education | Developed by kssaiteja</title>
+    <title>
+      CCGE - Corporate Commerce Global Education | Developed by kssaiteja
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="CCGE - Expert Finance Faculty" />
     <meta name="author" content="kssaiteja" />
@@ -29,29 +31,37 @@
         <div class="container">
           <div class="header-content d-flex flex-wrap align-items-center">
             <div class="logo">
-                              <a href="index.html" title="">
-                  <img
-                    src="assets/img/CCGE Final Logo.png"
-                    alt="CCGE - Corporate Commerce Global Education"
-                    style="max-height: 60px; width: auto;"
-                  />
-                </a>
+              <a href="index.html" title="">
+                <img
+                  src="assets/img/ccge-final-logo.png"
+                  alt="CCGE - Corporate Commerce Global Education"
+                  style="max-height: 60px; width: auto"
+                />
+              </a>
             </div>
             <!--logo end-->
             <ul class="contact-add d-flex flex-wrap">
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
+                  <img
+                    src="assets/img/icon1.png"
+                    alt="CCGE - Corporate Commerce Global Education"
+                    style="max-height: 50px; width: auto; margin-bottom: 15px"
+                  />
                   <div class="contact-tt">
                     <h4>Call</h4>
-                    <span>+91 7022878870</span>
+                    <span>96666 60713 / 14</span>
                   </div>
                 </div>
                 <!--contact-info end-->
               </li>
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
+                  <img
+                    src="assets/img/icon2.png"
+                    alt="CCGE - Corporate Commerce Global Education"
+                    style="max-height: 50px; width: auto; margin-bottom: 15px"
+                  />
                   <div class="contact-tt">
                     <h4>Work Time</h4>
                     <span>Mon - Sat 9 AM - 7 PM</span>
@@ -61,10 +71,17 @@
               </li>
               <li>
                 <div class="contact-info">
-                  <img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
+                  <img
+                    src="assets/img/icon3.png"
+                    alt="CCGE - Corporate Commerce Global Education"
+                    style="max-height: 50px; width: auto; margin-bottom: 15px"
+                  />
                   <div class="contact-tt">
                     <h4>Address</h4>
-                    <span>Mumbai, Delhi, Pune, Bangalore</span>
+                    <span
+                      >Opp. Madhura Nagar Metro Station,<br />Beside SBI Bank
+                      Lane,<br />Yella Reddy Guda, Ameerpet.</span
+                    >
                   </div>
                 </div>
                 <!--contact-info end-->
@@ -208,7 +225,16 @@
                             ></a>
                           </li>
                         </ul>
-                        <span><img src="assets/img/plus.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /></span>
+                        <span
+                          ><img
+                            src="assets/img/plus.png"
+                            alt="CCGE - Corporate Commerce Global Education"
+                            style="
+                              max-height: 50px;
+                              width: auto;
+                              margin-bottom: 15px;
+                            "
+                        /></span>
                       </div>
                     </div>
                     <div class="teacher-info">
@@ -248,7 +274,16 @@
                             ></a>
                           </li>
                         </ul>
-                        <span><img src="assets/img/plus.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /></span>
+                        <span
+                          ><img
+                            src="assets/img/plus.png"
+                            alt="CCGE - Corporate Commerce Global Education"
+                            style="
+                              max-height: 50px;
+                              width: auto;
+                              margin-bottom: 15px;
+                            "
+                        /></span>
                       </div>
                     </div>
                     <div class="teacher-info">
@@ -286,7 +321,16 @@
                             ></a>
                           </li>
                         </ul>
-                        <span><img src="assets/img/plus.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /></span>
+                        <span
+                          ><img
+                            src="assets/img/plus.png"
+                            alt="CCGE - Corporate Commerce Global Education"
+                            style="
+                              max-height: 50px;
+                              width: auto;
+                              margin-bottom: 15px;
+                            "
+                        /></span>
                       </div>
                     </div>
                     <div class="teacher-info">
@@ -324,7 +368,16 @@
                             ></a>
                           </li>
                         </ul>
-                        <span><img src="assets/img/plus.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /></span>
+                        <span
+                          ><img
+                            src="assets/img/plus.png"
+                            alt="CCGE - Corporate Commerce Global Education"
+                            style="
+                              max-height: 50px;
+                              width: auto;
+                              margin-bottom: 15px;
+                            "
+                        /></span>
                       </div>
                     </div>
                     <div class="teacher-info">
@@ -362,7 +415,16 @@
                             ></a>
                           </li>
                         </ul>
-                        <span><img src="assets/img/plus.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /></span>
+                        <span
+                          ><img
+                            src="assets/img/plus.png"
+                            alt="CCGE - Corporate Commerce Global Education"
+                            style="
+                              max-height: 50px;
+                              width: auto;
+                              margin-bottom: 15px;
+                            "
+                        /></span>
                       </div>
                     </div>
                     <div class="teacher-info">
@@ -400,7 +462,16 @@
                             ></a>
                           </li>
                         </ul>
-                        <span><img src="assets/img/plus.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" /></span>
+                        <span
+                          ><img
+                            src="assets/img/plus.png"
+                            alt="CCGE - Corporate Commerce Global Education"
+                            style="
+                              max-height: 50px;
+                              width: auto;
+                              margin-bottom: 15px;
+                            "
+                        /></span>
                       </div>
                     </div>
                     <div class="teacher-info">
@@ -506,7 +577,11 @@
             <div class="row">
               <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="widget widget-about">
-                  <img src="assets/img/CCGE Final Logo.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
+                  <img
+                    src="assets/img/ccge-final-logo.png"
+                    alt="CCGE - Corporate Commerce Global Education"
+                    style="max-height: 50px; width: auto; margin-bottom: 15px"
+                  />
                   <p>
                     Vivamus porta efficitur nibh nec convallis. Vestibulum
                     egestas eleifend justo. Ut tellus ipsum, accumsan
@@ -519,7 +594,15 @@
                   <ul class="contact-add">
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon1.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
+                        <img
+                          src="assets/img/icon1.png"
+                          alt="CCGE - Corporate Commerce Global Education"
+                          style="
+                            max-height: 50px;
+                            width: auto;
+                            margin-bottom: 15px;
+                          "
+                        />
                         <div class="contact-tt">
                           <h4>Call</h4>
                           <span>+2 342 5446 67</span>
@@ -529,7 +612,15 @@
                     </li>
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon2.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
+                        <img
+                          src="assets/img/icon2.png"
+                          alt="CCGE - Corporate Commerce Global Education"
+                          style="
+                            max-height: 50px;
+                            width: auto;
+                            margin-bottom: 15px;
+                          "
+                        />
                         <div class="contact-tt">
                           <h4>Work Time</h4>
                           <span>Mon - Fri 8 AM - 5 PM</span>
@@ -539,7 +630,15 @@
                     </li>
                     <li>
                       <div class="contact-info">
-                        <img src="assets/img/icon3.png" alt="CCGE - Corporate Commerce Global Education" style="max-height: 50px; width: auto; margin-bottom: 15px;" />
+                        <img
+                          src="assets/img/icon3.png"
+                          alt="CCGE - Corporate Commerce Global Education"
+                          style="
+                            max-height: 50px;
+                            width: auto;
+                            margin-bottom: 15px;
+                          "
+                        />
                         <div class="contact-tt">
                           <h4>Address</h4>
                           <span>Franklin St, Greenpoint Ave</span>
@@ -555,15 +654,42 @@
                 <div class="widget widget-links">
                   <h3 class="widget-title">Our Courses</h3>
                   <ul>
-                    <li><a href="class-single-acca.html" title="">ACCA Course</a></li>
-                    <li><a href="class-single-cfa.html" title="">CFA Course</a></li>
-                    <li><a href="class-single-cma.html" title="">CMA Course</a></li>
-                    <li><a href="class-single-cpa.html" title="">CPA Course</a></li>
-                    <li><a href="class-single-frm.html" title="">FRM Course</a></li>
-                    <li><a href="class-single-esg.html" title="">ESG Course</a></li>
-                    <li><a href="class-single-investment-banking.html" title="">Investment Banking</a></li>
-                    <li><a href="class-single-global-investment-banking.html" title="">Global Investment Banking</a></li>
-                    <li><a href="class-single-dipifrs.html" title="">DipIFRS Course</a></li>                  </ul>
+                    <li>
+                      <a href="class-single-acca.html" title="">ACCA Course</a>
+                    </li>
+                    <li>
+                      <a href="class-single-cfa.html" title="">CFA Course</a>
+                    </li>
+                    <li>
+                      <a href="class-single-cma.html" title="">CMA Course</a>
+                    </li>
+                    <li>
+                      <a href="class-single-cpa.html" title="">CPA Course</a>
+                    </li>
+                    <li>
+                      <a href="class-single-frm.html" title="">FRM Course</a>
+                    </li>
+                    <li>
+                      <a href="class-single-esg.html" title="">ESG Course</a>
+                    </li>
+                    <li>
+                      <a href="class-single-investment-banking.html" title=""
+                        >Investment Banking</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="class-single-global-investment-banking.html"
+                        title=""
+                        >Global Investment Banking</a
+                      >
+                    </li>
+                    <li>
+                      <a href="class-single-dipifrs.html" title=""
+                        >DipIFRS Course</a
+                      >
+                    </li>
+                  </ul>
                 </div>
                 <!--widget-links end-->
               </div>
@@ -581,7 +707,10 @@
           <div class="bottom-footer">
             <div class="row align-items-center">
               <div class="col-lg-6 col-md-6 col-sm-6">
-                <p>© 2025 CCGE - Corporate Commerce Global Education. All rights reserved.</p>
+                <p>
+                  © 2025 CCGE - Corporate Commerce Global Education. All rights
+                  reserved.
+                </p>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <ul class="social-links">
